--- a/frontend/src/components/commandbar/commandbar.scss
+++ b/frontend/src/components/commandbar/commandbar.scss
@@ -21,6 +21,8 @@
   .btn-component{
     i.question{
       display: flex;
+      margin-left: 6px!important;
+      font-size: 1.45em!important;
     }
     // min-height:fit-content;
     >div {
@@ -810,20 +812,26 @@
 // delete
 
 .tab-btn.delete {
-  margin: auto;
+  margin: auto!important;
   color: var(--btn-back)!important;
   margin-right: 2px!important;
+  margin-left: 4px;
   transition: background-color 0.3s;
+  font-size: 1em!important;
+
 
   &::before {
     border: 1px solid var(--bg-2);
     border-radius: var(--radius);
     display: block;
-    padding: 3px 3px;
-    text-align: center;
-    font-size: 0.7em;
     margin-right: 2px;
+    border: 1px solid var(--bg-2);
+    padding: 2px 2px!important;
+    text-align: center;
+    font-size: 0.89em;
     content: "\F78B";
+    margin-left: 4px;
+
   }
 
   &:hover::before {
@@ -832,3 +840,5 @@
     border-radius: var(--radius);
   }
 }
+
+
