--- a/frontend/src/components/contextMenu/style.scss
+++ b/frontend/src/components/contextMenu/style.scss
@@ -267,7 +267,7 @@
 
     &>div{
       display: inline;
-      margin-left: auto;
+      //margin-left: auto;
     }
   }
 }
